# trimode-ros

./: README  README.md
Arduino/IMU_calibration/: IMU_calibration.ino
Arduino/IMU_ros/: IMU_ros.ino
Arduino/IR_test/: IR_test.ino
Arduino/READ-ENC-TRY/: READ-ENC-TRY.ino
Arduino/backup_both_/: backup_both_.ino
Arduino/controller/: controller.ino
Arduino/controller_IR/: controller_IR.ino
Arduino/controller_standalone/: controller_standalone.ino
Arduino/encoder_back_ros/: encoder_back_ros.ino
Arduino/encoder_front_ros/: encoder_front_ros.ino
Arduino/libraries/ros_lib/hector_elevation_msgs/: ElevationGrid.h  ElevationMapMetaData.h
Arduino/libraries/ros_lib/kindr_msgs/: VectorAtPosition.h
Arduino/libraries/ros_lib/traversability_msgs/: CheckFootprintPath.h  FootprintPath.h  Overwrite.h  TraversabilityResult.h
Arduino/libraries/ros_lib/trimode_control/: BoolList.h  FloatList.h
Arduino/libraries/ros_lib/trimode_msgs/: Drive.h  DriveFeedback.h  Feedback.h  Status.h
Arduino/mcp-try/: mcp-try.ino
Arduino/move/: move.ino
Arduino/pwms_sub/: pwms_sub.ino
Arduino/read_encoder/: read_encoder.ino
Arduino/read_encoder_left_transf_ros/: read_encoder_left_transf_ros.ino
Arduino/read_encoder_right_transf_ros/: read_encoder_right_transf_ros.ino
Arduino/read_encoder_ros/: read_encoder_ros.ino
Arduino/read_encoder_transf_ros/: read_encoder_transf_ros.ino
Arduino/read_encoder_transf_ros_2/: read_encoder_transf_ros_2.ino
Arduino/trial/: trial.ino
Arduino/try2/: try2.ino
Arduino/try_IMU/: try_IMU.ino
Arduino/try_motor/: try_motor.ino
Arduino/wheel_transf/: wheel_transf.ino
Arduino/wheel_transf_2/: wheel_transf_2.ino
src/elevation_mapping-test-increase_fps/elevation_mapping_demos/config/elevation_maps/: simple_demo_map.yaml
src/elevation_mapping-test-increase_fps/elevation_mapping_demos/config/robots/: simple_demo_robot.yaml
src/elevation_mapping-test-increase_fps/elevation_mapping_demos/launch/: simple_demo.launch
src/simple_layers/: CMakeLists.txt  package.xml
src/simple_layers/include/simple_layers/: grid_layer.h
src/simple_layers/src/: grid_layer (copy).cpp  grid_layer.cpp  grid_layer_.cpp  trav_layer.cpp
src/trimode/: README.md
src/trimode/trimode_control/: CMakeLists.txt  package.xml
src/trimode/trimode_control/config/: control.yaml  robot_localization.yaml  robot_localization_sim.yaml  teleop.yaml  teleop_ps4.yaml
src/trimode/trimode_control/launch/: control.launch  robot.launch  robot_demo.launch  teleop.launch
src/trimode/trimode_control/src/: driver_2w_node  driver_arduino_node  driver_node  driver_node_no_fb  driver_pwm_node  joy2transf_vel_node  odometry.cpp  wheel_transf_control (copy).cpp  wheel_transf_control.cpp  wheel_transf_node
src/trimode/trimode_control/srv/: TransformWheels.srv
src/trimode/trimode_description/: CMakeLists.txt  package.xml
src/trimode/trimode_description/launch/: description.launch
src/trimode/trimode_description/meshes/: chassis.stl  claw_dx.STL  wheel2.stl
src/trimode/trimode_description/urdf/: trimode.gazebo  trimode.urdf.xacro  trimode_claw.urdf .xacro
src/trimode/trimode_description/urdf/accessories/: bridge_plate.urdf.xacro  hokuyo_ust10.urdf.xacro  kinect.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro  standoffs.urdf.xacro
src/trimode/trimode_desktop/trimode_desktop/: CMakeLists.txt  package.xml
src/trimode/trimode_desktop/trimode_viz/: CMakeLists.txt  package.xml
src/trimode/trimode_desktop/trimode_viz/launch/: view_model.launch  view_robot.launch
src/trimode/trimode_desktop/trimode_viz/rviz/: trav.rviz
src/trimode/trimode_msgs/: CMakeLists.txt  package.xml
src/trimode/trimode_navigation/: CMakeLists.txt  package.xml
src/trimode/trimode_navigation/launch/: amcl_demo.launch  gmapping_demo.launch  odom_navigation_demo.launch  pcl_filt.launch  rtabmap_kinect+odom+fake2d.launch  rtabmap_kinect.launch  trav.launch
src/trimode/trimode_navigation/launch/include/: gmapping.launch  move_base.launch  move_base_3d.launch
src/trimode/trimode_navigation/params/: costmap_common_params.yaml
src/trimode/trimode_navigation/params/map_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/trimode/trimode_navigation/params/odom_nav_params/: global_costmap_params.yaml  local_costmap_params.yaml
src/trimode/trimode_navigation/src/: grid2occupancy.cpp  odom2pose_node.py
src/trimode/trimode_simulator/trimode_gazebo2/: CMakeLists.txt  package.xml
src/trimode/trimode_simulator/trimode_gazebo2/launch/: trimode_world.launch
src/trimode/trimode_simulator/trimode_simulator/: CMakeLists.txt  package.xml
