<?xml version="1.0"?>
<package>
  <name>trimode_gazebo</name>
  <version>0.3.0</version>
  <description>Launchfiles to use Trimode in Gazebo.</description>

  <maintainer email="mpurvis@clearpathrobotics.com">Mike Purvis</maintainer>
  <author>Mike Purvis</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/jackal_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend version_gte="0.5">trimode_control</run_depend>
  <run_depend version_gte="0.5">trimode_description</run_depend>
  <run_depend>ros_controllers</run_depend>
  <run_depend>diff_drive_controller</run_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
  </export>
</package>
